# rag2

./: .gitignore  README.md  setup.bat  start.bat
backend/: .env.example  main.py  pyproject.toml
backend/app/config/: settings.py
backend/app/core/: logger.py  response.py
backend/app/db/: database.py
backend/app/models/: chat_history.py  note.py
backend/app/prompt/: main_prompt.txt
backend/app/rag/: agent.py  loader.py  query_processor.py  rag_service.py  retriever.py  text_splitter.py  vector_store.py
backend/app/router/: chat.py  health.py  knowledge.py  note.py
backend/app/schemas/: models.py
backend/app/services/: note_service.py  session_service.py
backend/app/utils/: factory.py  md5_store.py
backend/tests/: conftest.py  test_retrieval.py
backend/tests/test_data/: test_cases.json  test_doc_ai.txt  test_doc_env.txt
front/: index.html  package-lock.json  package.json  vite.config.js
front/src/: App.vue  main.js  style.css
front/src/composables/: useI18n.js  useTheme.js
front/src/config/: api.js
front/src/router/: index.js
front/src/views/: AIChat.vue  KnowledgeBase.vue  NoteEditor.vue  NoteList.vue  Profile.vue
