[project]
name = "rag2"
version = "0.1.0"
description = "简化版RAG智能助手"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.2.0",
    "chromadb>=0.5.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pypdf>=5.0.0",
    "docx2txt>=0.8",
    "python-magic-bin>=0.4.14",
    "unstructured>=0.16.0",
    "markdown>=3.5.0",
    "rank-bm25>=0.2.2",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
